
2020-06-16  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init) [HAVE_LIBPDCURSES]: fixed possible endless
	  loop when COLOR_PAIRS (an integer) extends SHRT_MAX (which seems to be
	  a PDCurses 4 CHTYPE_64 bug)

2020-06-14  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (cob_external_addr): if size and name matches the errno
	  register -> return its address so the COBOL program may directly
	  access it - late part of FR #49
	* call.c (insert), common.c (cob_init): ignore [_WIN32] if either
	  [HAVE_CANONICALIZE_FILE_NAME] or [HAVE_REALPATH] is defined

2020-06-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobgetopt.c: nearly redo the copy of GnuCOBOL's getopt implementation
	  from gnulib's 2020 version (still without: libc parts, structure,
	  more headers; undefine lock function calls, keep \n from msgids);
	  most important user change: we honor environment POSIXLY_CORRECT now
	* move.c (cob_move_display_to_binary, cob_move_binary_to_display):
	  fix runtime error (overflow in assignment) recognized with bug #384

2020-06-10  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c: define fdatasync if missing (fixing Bug #644 warning on MacOS)

2020-06-09  Simon Sobisch <simonsobisch@gnu.org>

	Bug #616 cannot redirect output of cobcrun --info
	FR #385 more details for screenio in cobcrun --info
	* cobcrun.c (get_screenio_and_mouse_info): new function,
	  extracted and extended from print_info (showing longname);
	  reasonable output for curses that isn't NCurses or PDCurses;
	  all curses calls but version info only in verbose mode
	* cobcrun.c (get_math_info): new function,
	  extracted and adjusted from print_info
	* cobcrun.c, common.h: (print_info) as delegate for
	  new (print_info_detailed) which handles verbose option

	* coblocal.h: adjusted GCC-version for definition of visibility attribute
	  COB_HIDDEN and option to disable via COB_NO_VISIBILITY_ATTRIBUTE;
	  not a solution (-> move to configure) but a workaround...
	