@@ -1971,8 +1971,10 @@ COB_EXPIMP int		cob_get_param_type ( int num_param );
 COB_EXPIMP void *	cob_get_param_data ( int num_param );
 COB_EXPIMP cob_s64_t	cob_get_s64_param  ( int num_param );
 COB_EXPIMP cob_u64_t	cob_get_u64_param  ( int num_param );
+COB_EXPIMP double	cob_get_dbl_param  ( int num_param );
 COB_EXPIMP char *	cob_get_picx_param ( int num_param, void *charfld, size_t charlen );
 COB_EXPIMP void *	cob_get_grp_param  ( int num_param, void *charfld, size_t charlen );
+COB_EXPIMP void		cob_put_dbl_param  ( int num_param, double value );
 COB_EXPIMP void		cob_put_s64_param  ( int num_param, cob_s64_t value );
 COB_EXPIMP void		cob_put_u64_param  ( int num_param, cob_u64_t value );
 COB_EXPIMP void 	cob_put_picx_param ( int num_param, void *charfld );
